# AnataAisite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: ci.yml
engine/: CMakeLists.txt
engine/include/: AnataAisite.h  _atpch.h
engine/include/AnataAisite/: Application.h  CameraController.h  Core.h  EntryPoint.h  ImGuiLayer.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Timestep.h  Window.h
engine/include/AnataAisite/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/include/AnataAisite/Renderer/: Buffer.h  Camera.h  RenderCommand.h  Renderer.h  Renderer2D.h  Shader.h  Texture.h  VertexArray.h
engine/res/icon/: engine_icon.h
engine/src/: Application.cpp  CameraController.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
engine/src/imgui/: ImGuiLayer.cpp
engine/src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
engine/src/platform/windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
engine/src/renderer/: Buffer.cpp  Camera.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer2D.cpp  RendererAPI.h  Shader.cpp  Texture.cpp  VertexArray.cpp
sandbox/: CMakeLists.txt  imgui.ini
sandbox/assets/shaders/: Texture.glsl
sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
